--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -10,5 +10,22 @@
     "subtitle": "Ingeniero de Software Full-Stack apasionado por la IA, Frontend, Backend, Bases de Datos y Machine Learning. Diseño sistemas escalables que combinan arquitectura limpia, rendimiento y experiencias de usuario inteligentes.",
     "viewWork": "Ver mi trabajo",
     "contactMe": "Contáctame"
+  },
+  "about": {
+    "title": "Sobre mí",
+    "description": "Desarrollo sistemas escalables de backend a frontend, conectando una arquitectura sólida con impacto real en los usuarios.",
+    "tabs": {
+      "skills": "Habilidades",
+      "experience": "Experiencia",
+      "interests": "Intereses"
+    }
+  },
+  "projects": {
+    "title": "Proyectos",
+    "description": "Una muestra de proyectos seleccionados que demuestran mi trabajo."
+  },
+  "contact": {
+    "title": "Contacto",
+    "description": "Ponte en contacto — Estoy abierto a colaboraciones y nuevas oportunidades."
   }
 }
