Add i18n translations for `Core Technologies`, `Tools & Platforms`, and `Interests` in `About` section; refactor tab navigation script for improved readability and maintainability

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -18,7 +18,10 @@
       "skills": "Skills",
       "experience": "Experience",
       "interests": "Interests"
-    }
+    },
+    "coreTechnologies": "Core Technologies",
+    "toolsPlatforms": "Tools & Platforms",
+    "interestsText": "Outside of work, I enjoy cycling, triathlon training, gym sessions, music, and reading — always exploring new tech and learning opportunities."
   },
   "projects": {
     "title": "Projects",
