Remove `interests.json`, migrate content to i18n translations, and update `Contact` section with dynamic i18n support for improved localization.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -21,14 +21,15 @@
     },
     "coreTechnologies": "Core Technologies",
     "toolsPlatforms": "Tools & Platforms",
-    "interestsText": "Outside of work, I enjoy cycling, triathlon training, gym sessions, music, and reading — always exploring new tech and learning opportunities."
+    "interestsText": "I’m passionate about pushing my limits in sports—especially triathlon and cycling—where discipline and perseverance keep me striving for progress. The beauty of nature and travel inspires me, and I treasure every adventure, from local rides to journeys through places like the Galapagos. My community—friends, family, and teammates—are an essential part of my story, fueling my growth and motivation every day. Creativity drives me, whether I’m exploring new hobbies like painting or experimenting with 3D printing. I believe that real growth comes from embracing the process, finding joy in every challenge and lesson. Above all, I value gratitude, resilience, and making meaningful memories along the way."
   },
   "projects": {
     "title": "Projects",
     "description": "A showcase of selected projects demonstrating my work."
   },
   "contact": {
-    "title": "Contact",
-    "description": "Let’s get in touch — I’m open to collaborations and new opportunities."
+    "title": "Initiate Connection",
+    "subtitle": "Have a project in mind? Let’s build something amazing together.",
+    "copyEmailAria": "Copy email"
   }
 }
