--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -24,12 +24,20 @@
     "interestsText": "I’m passionate about pushing my limits in sports—especially triathlon and cycling—where discipline and perseverance keep me striving for progress. The beauty of nature and travel inspires me, and I treasure every adventure, from local rides to journeys through places like the Galapagos. My community—friends, family, and teammates—are an essential part of my story, fueling my growth and motivation every day. Creativity drives me, whether I’m exploring new hobbies like painting or experimenting with 3D printing. I believe that real growth comes from embracing the process, finding joy in every challenge and lesson. Above all, I value gratitude, resilience, and making meaningful memories along the way."
   },
   "projects": {
-    "title": "Projects",
-    "description": "A showcase of selected projects demonstrating my work."
+    "title": "Featured Projects:",
+    "live": "Live Preview",
+    "github": "GitHub"
   },
   "contact": {
     "title": "Initiate Connection",
     "subtitle": "Have a project in mind? Let’s build something amazing together.",
     "copyEmailAria": "Copy email"
+  },
+  "footer": {
+    "rights": "All Rights Reserved.",
+    "home": "Home",
+    "projects": "Projects",
+    "about": "About",
+    "contact": "Contact"
   }
 }
