Add i18n translations for SEO metadata and structured data support
- Centralize SEO metadata fields (`title`, `description`, `jobTitle`) in i18n translations.
- Replace hardcoded metadata in `Layout.astro` with dynamic translations.
- Add structured data for the `Person` schema using localized content.
- Enhance multi-language support with dynamic canonical URLs and alternate links.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -39,5 +39,10 @@
     "projects": "Projects",
     "about": "About",
     "contact": "Contact"
+  },
+  "seo": {
+    "title": "Juan Almeida | Full Stack & AI Engineer",
+    "description": "Engineer passionate about building smart, scalable, and human-centered software through full-stack development and AI innovation.",
+    "jobTitle": "Full Stack & AI Engineer"
   }
 }
